# icetimes-crm

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CUSTOMIZE.md  Dockerfile  Makefile  README.md  _archive_irev_landing_20260617.html  conftest.py  db.sqlite3.bak_20260626_162826  docker-compose.yml  manage.py  package-lock.json  package.json  postcss.config.js  pyproject.toml  render.yaml  run-e2e.sh  server.js  tailwind.config.js
.cursor/rules/: project.mdc
.github/: copilot-instructions.md
.github/workflows/: ci.yml
.wrangler/cache/: pages.json  wrangler-account.json
apex/: asgi.py  storage.py  urls.py  wsgi.py
apex/admin/: __init__.py  apps.py  base.py
apex/settings/: base.py  dev.py  mssql.py  prod.py
apps/accounts/: admin.py  apps.py  backends.py  forms.py  middleware.py  mixins.py  models.py  settings_urls.py  settings_views.py  signals.py  throttle.py  two_factor.py  user_urls.py  verify_email.py  views.py
apps/activity/: admin.py  apps.py  models.py  services.py  signals.py  urls.py  views.py
apps/api/: api.py  auth.py  dispatch.py  models.py  pagination.py  schemas.py
apps/billing/: admin.py  forms.py  models.py  urls.py  views.py
apps/blog/: admin.py  models.py  urls.py  views.py
apps/bonus_comparatore/: __init__.py  admin.py  apps.py  livescores.py  models.py  news.py  predictions.py  urls.py  views.py
apps/chat/: models.py  urls.py  views.py
apps/components/: apps.py  registry.py  urls.py  views.py
apps/core/: breadcrumbs.py  context_processors.py  dev_autologin.py  health.py  messages.py  middleware.py  models.py  navigation.py  pwa.py  search.py  urls.py  views.py
apps/customers/: admin.py  forms.py  models.py  urls.py  views.py
apps/dashboard/: urls.py  views.py
apps/docs/: apps.py  nav.py  urls.py  views.py
apps/events/: forms.py  models.py  urls.py  views.py
apps/files/: forms.py  models.py  urls.py  views.py
apps/help/: admin.py  apps.py  models.py  urls.py  views.py
apps/invoices/: admin.py  forms.py  models.py  pdf.py  urls.py  views.py
apps/kanban/: apps.py  forms.py  models.py  urls.py  views.py
apps/leads/: admin.py  affinitrax.py  apps.py  auto_email.py  client.py  config.py  dispatch.py  forms.py  hypernet.py  irev.py  mediafront.py  models.py  notifications.py  poller.py  scoring.py  services.py  signals.py  sources.py  spmmonster.py  sync.py  tracking.py  tracking_urls.py  urls.py  v3.py  (+3 more)
deploy/: .env.example  README.md  fly.md  fly.toml  linux-vps.md  render.md  render.yaml
docs/: getting-started.md
public/: index.html
scripts/: axe_audit.py  capture_responsive.py  capture_screenshots.py  generate_pwa_icons.py  push_via_api.py
templates/: base.html  comparatore.html
tests/: conftest.py
(+774 files in other folders)
